# ly-rtdetr-ov

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md  work_log.txt
include/: CvTrans.h  OvCore.h  Proto.h  RT-DETRv2.h
rtdetrv2_pytorch/: requirements.txt  run.sh
rtdetrv2_pytorch/configs/: runtime.yml
rtdetrv2_pytorch/configs/dataset/: coco_detection.yml  rm_remapv1.yml  rm_remapv2.yml
rtdetrv2_pytorch/configs/rtdetrv2/: rtdetrv2_r18vd_tune.yml
rtdetrv2_pytorch/configs/rtdetrv2/include/: dataloader.yml  optimizer.yml
rtdetrv2_pytorch/output/241019/: log.txt
rtdetrv2_pytorch/src/core/: __init__.py  _config.py  workspace.py
rtdetrv2_pytorch/src/data/dataset/: __init__.py  coco_dataset.py  coco_eval.py
rtdetrv2_pytorch/src/zoo/rtdetr/: box_ops.py  denoising.py  matcher.py  rtdetr_postprocessor.py  rtdetrv2_criterion_amadfat.py
src/: CvTrans.cpp  OvCore.cpp  Proto.cpp  RT-DETRv2.cpp
test/: CMakeLists.txt  testProto.cpp  testRT-DETRv2.cpp
